Corrige padding nos inputs

--- a/style/_algorithmHelp.scss
+++ b/style/_algorithmHelp.scss
@@ -44,7 +44,8 @@
                         width: 25vw;
                         height: 4.5vh;
                         border: solid 1px $primary-color;
-                        margin-top: 7px
+                        margin-top: 7px;
+                        padding-left: 1em;
                     }
                 }
             }
