--- a/style/_news.scss
+++ b/style/_news.scss
@@ -62,6 +62,7 @@
                         height: 4.5vh;
                         border: solid 1px $primary-color;
                         margin-top: 2vh;
+                        padding-left: 1em;
                     }
                 }
 
